worked on views

--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -1,67 +1,61 @@
 <div class="col color" id="multi-bar">
-  <!-- SEARCH BAR -->
-  <form id="search-form" method="GET" action="{% url 'search' %}">
-    {% if search %}
-    <div class="row" id="search-bar">
-    {% else %}
-    <div class="row" id="search-bar" style="display: none;">
-    {% endif %}
+    <div class="row texture">
       <div class="col">
       </div>
-      <div class="col-auto">
-        <div class="input-group" id="search-field">
-          <label for="q" class="sr-only">Search</label>
-          {% if selected_q %}
-            <input class="form-control" type="text" name="q" id="q"
-            type="search" placeholder="Search for..."
-            aria-label="Search for..." autocomplete="off"
-            accept-charset="utf-8" value="{{ selected_q }}">
-          {% else %}
-            <input class="form-control" type="text" name="q" id="q"
-            type="search" placeholder="Search for..."
-            aria-label="Search for..." autocomplete="off"
-            accept-charset="utf-8">
-          {% endif %}
-            <button class="btn btn-outline-primary" id="search-button" type="submit">
-              <i class="fa fa-search"></i>
-            </button>
-        </div>
-      </div>
-      <div class="col">
-      </div>
-    </div>
-  </form>
-  <!-- BROWSE BAR -->
-  <form id="browse-form" method="GET" action="{% url 'browse' %}">
-    {% if browse %}
-    <div class="row texture" id="browse-bar">
-    {% else %}
-    <div class="row texture" id="browse-bar" style="display: none;">
-    {% endif %}
-      <div class="col">
-      </div>
-      <div class="col-auto">
-        <div class="btn-group" id="alphabet-buttons" data-toggle="buttons">
-          {% for letter in alphabet %}
-            {% if letter == selected_alphabet %}
-              <label class="btn btn-outline-primary alphabet-button active">
-                <input type="radio" name="alphabet" value="{{ letter }}" checked>
-                {{ letter }}
-              </label>
-              {% else %}
-              <label class="btn btn-outline-primary alphabet-button">
-                <input type="radio" name="alphabet" value="{{ letter }}">
-                {{ letter }}
-              </label>
+      <!-- SEARCH BAR -->
+      {% if search %}
+      <div class="col-auto" id="search-bar">
+      {% else %}
+      <div class="col-auto" id="search-bar" style="display: none;">
+      {% endif %}
+        <form id="search-form" method="GET" action="{% url 'search' %}">
+          <div class="input-group" id="search-field">
+            <label for="q" class="sr-only">Search</label>
+            {% if selected_q %}
+              <input class="form-control" type="text" name="q" id="q"
+              type="search" placeholder="Search for..."
+              aria-label="Search for..." autocomplete="off"
+              accept-charset="utf-8" value="{{ selected_q }}">
+            {% else %}
+              <input class="form-control" type="text" name="q" id="q"
+              type="search" placeholder="Search for..."
+              aria-label="Search for..." autocomplete="off"
+              accept-charset="utf-8">
             {% endif %}
-          {% endfor %}
-        </div>
+              <button class="btn btn-outline-primary" id="search-button" type="submit">
+                <i class="fa fa-search"></i>
+              </button>
+          </div>
+        </form>
+      </div>
+      <!-- BROWSE BAR -->
+      {% if browse %}
+      <div class="col-auto" id="browse-bar">
+      {% else %}
+      <div class="col-auto" id="browse-bar" style="display: none;">
+      {% endif %}
+        <form id="browse-form" method="GET" action="{% url 'browse' %}">
+          <div class="btn-group" id="alphabet-buttons" data-toggle="buttons">
+            {% for letter in alphabet %}
+            {% if letter == selected_alphabet %}
+            <label class="btn btn-outline-primary alphabet-button active">
+              <input type="radio" name="alphabet" value="{{ letter }}" checked>
+              {{ letter }}
+            </label>
+            {% else %}
+            <label class="btn btn-outline-primary alphabet-button">
+              <input type="radio" name="alphabet" value="{{ letter }}">
+              {{ letter }}
+            </label>
+            {% endif %}
+            {% endfor %}
+          </div>
+        </form>
       </div>
       <div class="col">
       </div>
     </div>
-  </form>
-  <div class="row texture" id="player">
-
-  </div>
+    <!-- PLAYA -->
+    <div class="row texture" id="player">
+    </div>
 </div>
