--- a/index/templates/index/charts.html
+++ b/index/templates/index/charts.html
@@ -4,8 +4,7 @@
     {% include 'optionsbar.html' %}
   </form>
   <div class="row results-row">
-    {% if chart %}
-      {% for podcast in chart %}
+    {% for podcast in chart %}
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 result-box">
           <form id="sub-form" action="{% url 'subscribe' %}"
           id="{{ podcast.itunesid }}" method="POST">
@@ -21,7 +20,7 @@
             </button>
           </form>
           <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-            <img class="img-fluid result-image" src="{{ podcast.artworkUrl }}200x200bb.jpg" />
+            <img class="img-fluid result-image" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}200x200bb.jpg&w=200&h=200&t=absolute" />
           </a>
           <h6 class="result-title">
             <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
@@ -35,14 +34,7 @@
             </a>
           </p>
         </div>
-      {% endfor %}
-    {% else %}
-      <div class="col">
-        <p>
-          No results :p
-        </p>
-      </div>
-    {% endif %}
+    {% endfor %}
   </div>
 </div>
 {% else %}
