--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -31,8 +31,7 @@ dopepod
           </button>
         </form>
         <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-          <img class="img-fluid result-image" src="{{ podcast.artworkUrl }}200x200bb.jpg" />
-          <!--<img class="img-fluid result-image" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}200x200bb.jpg" />-->
+          <img class="img-fluid result-image" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}200x200bb.jpg&w=200&h=200&t=absolute" />
         </a>
         <h6 class="result-title">
           <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
