starting work on animation

--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,27 +1,27 @@
 <ul class="nav nav-fade">
   <li class="nav-item">
     <a class="navbar-brand index-link" href="{% url 'index' %}">
-      <strong>
+      <span class="">
         d
-      </strong>
-      <strong>
+      </span>
+      <span class="">
         o
-      </strong>
-      <strong>
+      </span>
+      <span class="">
         p
-      </strong>
-      <strong>
+      </span>
+      <span class="">
         e
-      </strong>
-      <strong>
+      </span>
+      <span class="">
         p
-      </strong>
-      <strong>
+      </span>
+      <span class="">
         o
-      </strong>
-      <strong>
+      </span>
+      <span class="">
         d
-      </strong>
+      </span>
     </a>
   </li>
   <li class="nav-item">
