--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -17,8 +17,8 @@ dopepod
   <div class="row results-row">
     {% for podcast in podcasts %}
       <div class="col-lg-2 col-md-3 col-sm-4 col-6 result-box">
-        <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-          <img class="img-fluid result-image" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}200x200bb.jpg&w=200&h=200&t=absolute" />
+        <a class="show-podinfo result-image" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+          <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}200x200bb.jpg&w=200&h=200&t=absolute" />
         </a>
         <h6 class="result-title">
           <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
@@ -26,7 +26,9 @@ dopepod
           </a>
         </h6>
         <p class="result-artist">
-          <span>by </span>
+          <span>
+            by 
+          </span>
           <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.artist }}">
             {{ podcast.artist }}
           </a>
