--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,5 +1,8 @@
 {% if episodes %}
 <div class="col" id="episodes-wrapper">
+  <div class="row">
+    
+  </div>
   <div id="exampleAccordion" data-children=".item">
   {% for episode in episodes %}
     <div class="item">
