--- a/index/static/style.css
+++ b/index/static/style.css
@@ -58,20 +58,17 @@ body {
 
 #main {
   padding: 30px;
+  background-color: #E6ECF0;
+  min-height: 100vh;
 }
 #episodes {
-  min-height: 100%;
-  margin-top: 15px;
-  padding-top: 15px;
-  margin-bottom: 15px;
+
 }
 #subscriptions {
 
 }
 
 #main-content {
-  background-color: #E6ECF0;
-  min-height: 100vh;
 }
 .btn-group-vertical {
   z-index: 1000;
@@ -173,7 +170,7 @@ body {
 
 /* PODINFO */
 #podinfo {
-  padding: 15px;
+  padding: 25px;
 }
 
 .results-row {
@@ -186,6 +183,10 @@ body {
 
 #settings-form {
 
+}
+
+#settings {
+  padding: 25px;
 }
 
 .breadcrumb-item+.breadcrumb-item::before {
@@ -201,10 +202,13 @@ body {
 }
 
 #episodes-wrapper {
+  min-height: 100%;
+  margin-top: 15px;
+  padding-top: 15px;
+  margin-bottom: 15px;
   border: 1px solid #e6ecf0;
   /*border-radius: 8px;*/
   overflow: hidden;
-  margin-top: 15px;
   background-color: #FFFFFF;
 }
 
@@ -213,7 +217,11 @@ body {
   /*border-radius: 8px;*/
   overflow: hidden;
   margin-top: 15px;
+  margin-bottom: 15px;
   background-color: #FFFFFF;
+  -webkit-box-shadow: 1px 1px 2px 2px rgba(0,0,0,0.2), -1px -1px 2px 2px rgba(0,0,0,0.2);
+  -moz-box-shadow: 1px 1px 2px 2px rgba(0,0,0,0.2), -1px -1px 2px 2px rgba(0,0,0,0.2);
+  box-shadow: 1px 1px 2px 2px rgba(0,0,0,0.2), -1px -1px 2px 2px rgba(0,0,0,0.2);
 }
 .result-wrapper {
   padding-left: 0px;
@@ -228,8 +236,7 @@ body {
 }
 .result-image {
   object-fit: cover;
-  /*width: 200px;
-  height: 200px;*/
+  width: 100%;
   background: transparent url("loading.gif") center no-repeat;
 }
 .result-title, .result-title:hover {
@@ -254,6 +261,15 @@ a, a:hover {
   -webkit-line-clamp: 2; /* number of lines to show */
   line-height: 1.5;        /* fallback */
   max-height: 3.0;       /* fallback */
+}
+.browse-result-title, .browse-result-titlet:hover {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1; /* number of lines to show */
+  line-height: 1;        /* fallback */
+  max-height: 2;       /* fallback */
 }
 
 #recommendations{
