--- a/index/templates/account/signup.html
+++ b/index/templates/account/signup.html
@@ -1,4 +1,4 @@
-{% extends request.is_ajax|yesno:'ajax.html,account/base.html' %}
+{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
 
 {% load i18n %}
 
@@ -6,14 +6,24 @@
 register
 {% endblock %}
 
-{% block account %}
-<h1>{% trans "Sign Up" %}</h1>
-
-<p>{% blocktrans %}Already have an account? Then please <a class="login-link" href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup-form" method="POST" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+{% block stage %}
+<div class="container" id="settings">
+  <div class="row">
+    <div class="col">
+    </div>
+    <div class="col-auto">
+      <h1>{% trans "Sign Up" %}</h1>
+      
+      <p>{% blocktrans %}Already have an account? Then please <a class="login-link" href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+      
+      <form class="signup-form" method="POST" action="{% url 'account_signup' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+      </form>
+    </div>
+    <div class="col">
+    </div>
+  </div>
+</div>
 {% endblock %}
