--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -12,7 +12,7 @@
       {% endblock %}
     </title>
     <!--Font Awesome-->
-    <script src="https://use.fontawesome.com/793ac32e1c.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
