--- a/index/templates/index/settings.html
+++ b/index/templates/index/settings.html
@@ -6,36 +6,36 @@ settings
 
 {% block stage %}
 <!-- SETTINGS -->
-<div class="col-sm-3">
-
-</div>
-<div class="col-sm-6">
+<div class="container" id="settings">
   <div class="row">
     <div class="col">
-      <h5>
-        My Profile
-      </h5>
     </div>
-  </div>
-  <div class="row">
-    <!-- <form id="settings-form" action="{% url 'settings' %}" method="POST"> -->
-      <div class="col-sm-6">
-        {% csrf_token %}
-        {{ user_form }}
-      </div>
-      <div class="col-sm-6">
+    <div class="col-auto">
+      {% csrf_token %}
+      <p>
+        {{ user_form.email.label_tag }}
+      </p>
+      <p>
+        {{ user_form.email }}
+      </p>
+      <p>
         {{ profile_form.location.label_tag }}
+      </p>
+      <p>
         {{ profile_form.location }}
+      </p>
+      <p>
         {{ profile_form.show_explicit.label_tag }}
         {{ profile_form.show_explicit }}
-        <button class="btn btn-outline-primary" type="submit">
-          Save changes
-        </button>
-      </div>
-    <!-- </form> -->
+      </p>
+      <button class="btn btn-outline-primary" type="submit">
+        Save changes
+      </button>
+    </div>
+    <div class="col">
+    </div>
   </div>
-</div>
-<div class="col-sm-3">
-
+    <!-- <form id="settings-form" action="{% url 'settings' %}" method="POST"> -->
+    <!-- </form> -->
 </div>
 {% endblock %}
