--- a/index/templates/optionsbar.html
+++ b/index/templates/optionsbar.html
@@ -5,43 +5,31 @@
     <!-- PAGINATION -->
       <div class="btn-group" id="page-buttons" data-toggle="buttons">
         {% if podcasts.has_previous %}
-        <label class="btn btn-outline-primary page-button">
-          <input type="radio" name="page" value="{{ podcasts.previous_page_number }}">
-          &laquo;
-        </label>
-        {% else %}
-        <label class="btn btn-outline-primary page-button">
-          <input type="radio" name="page" value="xxx">
-          &laquo;
-        </label>
+          <label class="btn btn-outline-primary page-button">
+            <input type="radio" name="page" value="{{ podcasts.previous_page_number }}">
+            <i class="fas fa-chevron-left"></i>
+          </label>
         {% endif %}
         {% for i in podcasts.paginator.page_range %}
         {% if podcasts.number == i %}
-        <label class="btn btn-outline-primary page-button active">
-          <input type="radio" name="page" value="{{ i }}" checked>
-          {{ i }}
-        </label>
+          <label class="btn btn-outline-primary page-button active">
+            <input type="radio" name="page" value="{{ i }}" checked>
+            {{ i }}
+          </label>
         {% elif i > podcasts.number|add:'-4' and i < podcasts.number|add:'4' %}
-        <label class="btn btn-outline-primary page-button">
-          <input type="radio" name="page" value="{{ i }}">
-          {{ i }}
-        </label>
+          <label class="btn btn-outline-primary page-button">
+            <input type="radio" name="page" value="{{ i }}">
+            {{ i }}
+          </label>
         {% endif %}
         {% endfor %}
         {% if podcasts.has_next %}
-        <label class="btn btn-outline-primary page-button">
-          <input type="radio" name="page" value="{{ podcasts.next_page_number }}">
-          &raquo;
-        </label>
-        {% else %}
-        <label class="btn btn-outline-primary page-button">
-          <input type="radio" name="page" value="xxx">
-          &raquo;
-        </label>
+          <label class="btn btn-outline-primary page-button">
+            <input type="radio" name="page" value="{{ podcasts.next_page_number }}">
+            <i class="fas fa-chevron-right"></i>
+          </label>
         {% endif %}
       </div>
-      {{ podcasts.paginator.count }} results
-      {{ podcasts.paginator.num_pages }} pages
     {% endif %}
   </div>
   <div class="col texture">
@@ -50,53 +38,40 @@
   <div class="col-auto texture">
     <ul class="nav nav-fade">
       {% if genres %}
-      <!-- GENRES -->
-      <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
-          Genre
-        </a>
-      </li>
+        <!-- GENRES -->
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
+            Genre
+            {% if selected_genre %}
+            <br />
+            <span>
+              {{ selected_genre }}
+            </span>
+            {% endif %}
+          </a>
+        </li>
       {% endif %}
       {% if languages %}
-      <!-- LANGUAGES -->
-      <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" data-target="#language-collapse" aria-expanded="false" aria-controls="language-collapse">
-          Language
-        </a>
-      </li>
-      {% endif %}
-      <!-- VIEW -->
-      {% if view %}
-      <li class="nav-item">
-        <label class="nav-link view-button active">
-          {% if selected_view == 'detail' %}
-          <input type="checkbox" name="view" value="detail">
-          Detail
-          {% else %}
-          <input type="checkbox" name="view" value="list">
-          List
-          {% endif %}
-        </label>
-      </li>
+        <!-- LANGUAGES -->
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="collapse" data-target="#language-collapse" aria-expanded="false" aria-controls="language-collapse">
+            Language
+            {% if selected_language %}
+            <br />
+            <span>
+              {{ selected_language }}
+            </span>
+            {% endif %}
+          </a>
+        </li>
       {% endif %}
     </ul>
   </div>
 </div>
 <div class="row options-select">
-  {% if genres %}
+  {% if languages %}
   <div class="collapse" id="language-collapse">
-    <div class="btn-group-vertical btn-group-sm" id="language-buttons" data-toggle="buttons">
-      {% if selected_language == None %}
-      <label class="btn btn-outline-primary active">
-        <input type="radio" name="language" value="All" checked>
-        All
-      </label>
-      {% else %}
-      <label class="btn btn-outline-primary">
-        <input type="radio" name="language" value="All">
-        All
-      </label>
-      {% endif %}
+    <div class="btn-group btn-group-sm" id="language-buttons" data-toggle="buttons">
       {% for language in languages %}
       {% if language.name == selected_language %}
       <label class="btn btn-outline-primary active">
@@ -113,20 +88,9 @@
     </div>
   </div>
   {% endif %}
-  {% if languages %}
+  {% if genres %}
   <div class="collapse" id="genre-collapse">
-    <div class="btn-group-vertical btn-group-sm" id="genre-buttons{{ podcasts.paginator.count }}" data-toggle="buttons">
-      {% if selected_genre == None %}
-      <label class="btn btn-outline-primary active">
-        <input type="radio" name="genre" value="All" checked>
-        All
-      </label>
-      {% else %}
-      <label class="btn btn-outline-primary">
-        <input type="radio" name="genre" value="All">
-        All
-      </label>
-      {% endif %}
+    <div class="btn-group btn-group-sm" id="genre-buttons{{ podcasts.paginator.count }}" data-toggle="buttons">
       {% for genre in genres %}
       {% if genre.name == selected_genre %}
       <label class="btn btn-outline-primary active">
