--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -3,7 +3,7 @@
 </div>
 <div class="col-auto">
   <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-    <img src="{{ podcast.artworkUrl }}100x100bb.jpg" />
+    <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}100x100bb&w=100&h=100&t=absolute" />
   </a>
 </div>
 <div class="col-auto">
