--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -5,31 +5,19 @@
 {% endblock %}
 
 {% block stage %}
-<div class="col-sm-3">
-
-</div>
-<div class="col-sm-6" >
-  <div class="row" id="podinfo">
+<div class="container" id="podinfo">
+  <div class="row" >
     <!-- PODINFO -->
-    <div class="col-sm-3">
-      <img src="{{ podcast.artworkUrl }}200x200bb.jpg" />
-    </div>
-    <div class="col-sm-6">
-      <h3>
-        {{ podcast.title }}
-      </h3>
-      <h4>
-        By {{ podcast.artist }}
-      </h4>
-      <p>
-        {{ podcast.description }}
-      </p>
-    </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3" id="podinfo-side">
+      <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}300x300bb.jpg&w=300&h=300&t=absolute" />
+      <br />
       <form id="sub-form" action="{% url 'subscribe' %}"
       id="{{ podcast.itunesid }}" method="POST">
       {% csrf_token %}
       <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+      <span>
+        {{ podcast.n_subscribers }} subscribers
+      </span>
       {% if podcast.subscribed %}
       <button type="submit" class="btn btn-outline-primary active sub-button">
         Unsubscribe
@@ -59,9 +47,20 @@
         </em>
       </p>
     </div>
+    <div class="col-sm-9" id="podinfo-main">
+      <h3>
+        {{ podcast.title }}
+      </h3>
+      <span>
+        By 
+      </span>
+      <h4>
+        {{ podcast.artist }}
+      </h4>
+      <p>
+        {{ podcast.description|linebreaksbr }}
+      </p>
+    </div>
   </div>
-</div>
-<div class="col-sm-3">
-
 </div>
 {% endblock %}
