--- a/index/templates/index/results_list.html
+++ b/index/templates/index/results_list.html
@@ -5,7 +5,7 @@ dopepod
 {% endblock %}
 
 {% block results %}
-{% if podcasts1 %}
+{% if podcasts %}
 <div class="col" id="results-wrapper">
   <form id="result-form" method="GET" action="{% url 'browse' %}">
     {% include 'optionsbar.html' %}
