--- a/index/static/style.css
+++ b/index/static/style.css
@@ -57,7 +57,6 @@ body {
 
 #main {
   padding: 30px;
-  background-color: #E6ECF0;
   min-height: 100vh;
 }
 #episodes {
@@ -68,6 +67,7 @@ body {
 }
 
 #main-content {
+  background-color: #E6ECF0;
 }
 .btn-group-vertical {
   z-index: 1000;
@@ -125,6 +125,7 @@ body {
 }
 
 #stage {
+  background-color: #E6ECF0;
   z-index: 90;
   overflow: hidden;
 }
@@ -170,11 +171,12 @@ body {
 
 /* PODINFO */
 #podinfo {
-  padding: 25px;
+  padding: 15px 0px;
+  height: 100%;
 }
 
 .results-row {
-  padding: 10px;
+  padding: 15px;
 }
 
 #browse {
@@ -182,7 +184,15 @@ body {
 }
 
 #settings-form {
-
+  padding: 20px;
+  background: rgba(76,222,181,1);
+  background: -moz-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(76,222,181,1)), color-stop(100%, rgba(145,194,186,1)));
+  background: -webkit-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
+  background: -o-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
+  background: -ms-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
+  background: linear-gradient(to right, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4cdeb5', endColorstr='#91c2ba', GradientType=1 );
 }
 
 #settings {
