--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,70 +1,75 @@
-<ul class="nav nav-fade">
-  <li class="nav-item">
-    <a class="navbar-brand index-link" href="{% url 'index' %}">
-      <span class="">
-        d
-      </span>
-      <span class="">
-        o
-      </span>
-      <span class="">
-        p
-      </span>
-      <span class="">
-        e
-      </span>
-      <span class="">
-        p
-      </span>
-      <span class="">
-        o
-      </span>
-      <span class="">
-        d
-      </span>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link blog-link" href="#">
-      blog
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link browse-link" href="{% url 'browse' %}">
-      browse
-    </a>
-  </li>
-  {% if user.is_authenticated %}
-  <li class="nav-item">
-    <a class="nav-link settings-link" href="{% url 'settings' %}">
-      settings
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link subscriptions-link" href="{% url 'subscriptions' %}">
-      subscriptions
-    </a>
-  </li>
-  {% endif %}
-</ul>
+<div class="col">
+  <ul class="nav nav-fade">
+    <li class="nav-item">
+      <a class="nav-link blog-link" href="#">
+        blog
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link browse-link" href="{% url 'browse' %}">
+        browse
+      </a>
+    </li>
+    {% if user.is_authenticated %}
+    <li class="nav-item">
+      <a class="nav-link subscriptions-link" href="{% url 'subscriptions' %}">
+        subscriptions
+      </a>
+    </li>
+    {% endif %}
+  </ul>
+</div>
 
-<ul class="nav nav-fade">
-  {% if user.is_authenticated %}
-  <li class="nav-item">
-    <a class="nav-link ajax-logout" href="{% url 'account_logout' %}">
-      Logout
-    </a>
-  </li>
-  {% else %}
-  <li class="nav-item">
-    <a class="nav-link ajax-register" href="{% url 'account_signup' %}">
-      Register
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link ajax-login" href="{% url 'account_login' %}">
-      Login
-    </a>
-  </li>
-  {% endif %}
-</ul>
+<div class="col-sm-2">
+  <a class="navbar-brand index-link" href="{% url 'index' %}">
+    <span class="">
+      d
+    </span>
+    <span class="">
+      o
+    </span>
+    <span class="">
+      p
+    </span>
+    <span class="">
+      e
+    </span>
+    <span class="">
+      p
+    </span>
+    <span class="">
+      o
+    </span>
+    <span class="">
+      d
+    </span>
+  </a>
+</div>
+
+<div class="col">
+  <ul class="nav nav-fade">
+    {% if user.is_authenticated %}
+    <li class="nav-item ml-auto">
+      <a class="nav-link settings-link" href="{% url 'settings' %}">
+        settings
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link ajax-logout" href="{% url 'account_logout' %}">
+        Logout
+      </a>
+    </li>
+    {% else %}
+    <li class="nav-item">
+      <a class="nav-link ajax-register" href="{% url 'account_signup' %}">
+        Register
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link ajax-login" href="{% url 'account_login' %}">
+        Login
+      </a>
+    </li>
+    {% endif %}
+  </ul>
+</div>
