--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -5,23 +5,32 @@
 {% endblock %}
 
 {% block stage %}
-<div class="container" id="podinfo">
-  <div class="row" >
+<div class="container">
+  <div class="row" id="podinfo">
     <!-- PODINFO -->
-    <div class="col-sm-3" id="podinfo-side">
+    <div class="col-sm-3" id="podinfo-image">
       <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}300x300bb.jpg&w=300&h=300&t=absolute" />
-      <br />
+    </div>
+    <div class="col-sm-6" id="podinfo-main">
+      <h3>
+        {{ podcast.title }}
+      </h3>
+      <h4>
+        <span>
+          By 
+        </span>
+        {{ podcast.artist }}
+      </h4>
+      <p>
+        {{ podcast.description|linebreaksbr }}
+      </p>
+    </div>
+    <div class="col-sm-3" id="podinfo-side">
       <form id="sub-form" action="{% url 'subscribe' %}"
       id="{{ podcast.itunesid }}" method="POST">
       {% csrf_token %}
       <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
       <p>
-        <span id="n_subscribers">
-          {{ podcast.n_subscribers }}
-        </span>
-        <span>
-          subscribers
-        </span>
         {% if podcast.subscribed %}
           <button type="submit" class="btn btn-outline-primary active sub-button">
             Unsubscribe
@@ -29,9 +38,21 @@
           <button type="submit" class="btn btn-outline-primary sub-button">
             Subscribe
         {% endif %}
-        </button>
-      </p>
+          </button>
+        </p>
       </form>
+      <p>
+        <span id="n_subscribers">
+          {{ podcast.n_subscribers }}
+        </span>
+        <span id="subscriber">
+          {% if podcast.n_subscribers == 1 %}
+          subsciber
+          {% else %}
+          subscribers
+          {% endif %}
+        </span>
+      </p>
       <p>
         {% if podcast.genre.supergenre %}
         {{ podcast.genre.supergenre }} -
@@ -50,20 +71,6 @@
         <em>
           {{ podcast.copyrighttext }}
         </em>
-      </p>
-    </div>
-    <div class="col-sm-9" id="podinfo-main">
-      <h3>
-        {{ podcast.title }}
-      </h3>
-      <span>
-        By 
-      </span>
-      <h4>
-        {{ podcast.artist }}
-      </h4>
-      <p>
-        {{ podcast.description|linebreaksbr }}
       </p>
     </div>
   </div>
