--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -6,7 +6,7 @@ dopepod
 
 {% block results %}
 {% if subscriptions %}
-<div class="col" id="results-wrapper">
+<div class="col-lg" id="results-wrapper">
   <form id="result-form" method="GET" action="{% url 'subscriptions' %}">
     {% include 'optionsbar.html' %}
   </form>
