--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -20,8 +20,8 @@
   </ul>
 </div>
 
-<div class="col-sm-2">
-  <a class="navbar-brand index-link" href="{% url 'index' %}">
+<div class="col-sm-2" id="brand">
+  <a class="index-link" href="{% url 'index' %}">
     <span class="">
       d
     </span>
