--- a/index/templates/optionsbar.html
+++ b/index/templates/optionsbar.html
@@ -32,8 +32,10 @@
       </div>
     {% endif %}
   </div>
-  <div class="col texture">
-    {{ results_info }}
+  <div class="col texture results-info">
+    <h3>
+      {{ results_info }}
+    </h3>
   </div>
   <div class="col-auto texture">
     <ul class="nav nav-fade">
@@ -70,41 +72,41 @@
 </div>
 <div class="row options-select">
   {% if languages %}
-  <div class="collapse" id="language-collapse">
-    <div class="btn-group btn-group-sm" id="language-buttons" data-toggle="buttons">
-      {% for language in languages %}
-      {% if language.name == selected_language %}
-      <label class="btn btn-outline-primary active">
-        <input type="radio" name="language" value="{{ language.name }}" checked>
-        {{ language.name }}
-      </label>
-      {% else %}
-      <label class="btn btn-outline-primary">
-        <input type="radio" name="language" value="{{ language.name }}">
-        {{ language.name }}
-      </label>
-      {% endif %}
-      {% endfor %}
+    <div class="collapse" id="language-collapse">
+      <div class="btn-group btn-group-sm" id="language-buttons" data-toggle="buttons">
+        {% for language in languages %}
+          {% if language.name == selected_language %}
+            <label class="btn btn-outline-primary active">
+              <input type="radio" name="language" value="{{ language.name }}" checked>
+              {{ language.name }}
+            </label>
+          {% else %}
+            <label class="btn btn-outline-primary">
+              <input type="radio" name="language" value="{{ language.name }}">
+              {{ language.name }}
+            </label>
+          {% endif %}
+        {% endfor %}
+      </div>
     </div>
-  </div>
   {% endif %}
   {% if genres %}
-  <div class="collapse" id="genre-collapse">
-    <div class="btn-group btn-group-sm" id="genre-buttons{{ podcasts.paginator.count }}" data-toggle="buttons">
-      {% for genre in genres %}
-      {% if genre.name == selected_genre %}
-      <label class="btn btn-outline-primary active">
-        <input type="radio" name="genre" value="{{ genre.name }}" checked>
-        {{ genre.name }}
-      </label>
-      {% else %}
-      <label class="btn btn-outline-primary">
-        <input type="radio" name="genre" value="{{ genre.name }}">
-        {{ genre.name }}
-      </label>
-      {% endif %}
-      {% endfor %}
+    <div class="collapse" id="genre-collapse">
+      <div class="btn-group btn-group-sm" id="genre-buttons" data-toggle="buttons">
+        {% for genre in genres %}
+          {% if genre.name == selected_genre %}
+            <label class="btn btn-outline-primary active">
+              <input type="radio" name="genre" value="{{ genre.name }}" checked>
+              {{ genre.name }}
+            </label>
+          {% else %}
+            <label class="btn btn-outline-primary">
+              <input type="radio" name="genre" value="{{ genre.name }}">
+              {{ genre.name }}
+            </label>
+          {% endif %}
+        {% endfor %}
+      </div>
     </div>
-  </div>
   {% endif %}
 </div>
